fixed icons not showing full name

--- a/assets/styles/ee-design-system/_utilities.scss
+++ b/assets/styles/ee-design-system/_utilities.scss
@@ -7,7 +7,6 @@ Details: http://www.positioniseverything.net/easyclearing.html
   display:block;
   height:0;
   clear:both;
-  visibility:hidden;
   }
 
 /* Additional Utility Classes
@@ -290,5 +289,3 @@ img.inline, .inline           { display:inline-block; }
     margin-bottom: 0;
   }
 }
-
-
